--- a/intex.html
+++ b/intex.html
@@ -2,11 +2,11 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>HeartMeter</title>
+  <title>Lovecentage</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>💌 HeartMeter</h1>
+  <h1>💌 Lovecentage</h1>
   <script src="script.js"></script>
 </body>
 </html>
